fix footer overlap on details page in mobile view

--- a/docs/assets/css/detail-2.scss
+++ b/docs/assets/css/detail-2.scss
@@ -310,6 +310,12 @@ body {
             }
         }
     }
+    @include max-yatayTablet {
+        margin-bottom: 40px;
+    }
+    @include max-dikeyTablet {
+        margin-bottom: 90px;
+    }
 }
 pre.code-view {
     & > code {
